tests/NormalTests/paczka1/small_fuzzy/52361287.err
Error in line 2: L6kBamLUkOD A112 37,2
Error in line 7: L6kBamLUkOD A257 60,4
Error in line 1: dsGjo A112 36,9
